--- a/app/views/dispatchers/_unassigned_trips_table.html.haml
+++ b/app/views/dispatchers/_unassigned_trips_table.html.haml
@@ -37,7 +37,11 @@
         %td= format_time_for_listing(trip.appointment_time) if trip.appointment_time
         %td= trip.pickup_address.try(:one_line_text)
         %td= trip.dropoff_address.try(:one_line_text)
-        %td= trip.trip_size
+        %td
+          = trip.trip_size
+          - if trip.ridership_mobilities.has_capacity.empty?
+            %span.label.label-danger.pull-right
+              Mobility?
         %td
         %td= trip.notes
         %td
