--- a/app/views/recurring_dispatchers/_run_manifest_table.html.haml
+++ b/app/views/recurring_dispatchers/_run_manifest_table.html.haml
@@ -35,6 +35,11 @@
             %input.trip-selected{type: "checkbox"}
           %td{style: 'white-space: nowrap;'}
             = itin[:leg_flag] == 1 ? 'PU' : 'DO'
+
+            - if trip.ridership_mobilities.has_capacity.empty?
+              %span.label.label-danger
+                Mobility?
+
           %td= itin[:customer]
           %td= itin[:address]
           %td= format_time_for_listing(itin[:time])
