Availability table (WIP)

--- a/app/views/drivers/availability.html.haml
+++ b/app/views/drivers/availability.html.haml
@@ -1,3 +1,12 @@
+:css
+  .panel-heading span.panel-expand-collapse {
+    cursor: pointer;
+  }
+
+  table th {
+    background: transparent;
+    color: black;
+  }
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'drivers'
 #page-header.row
   .col-sm-12.col-md-6
@@ -10,8 +19,37 @@
       = link_to translate_helper("back"), @driver, class: "btn action-button"
 
 .row
-  .col-sm-12.col-md-6
+  .col-sm-12
     = render 'recurring_availability_panel'
+  .col-sm-12
     = render 'daily_availability_panel'
-  .col-sm-12.col-md-6
+  .col-sm-12
     = render 'planned_leaves_panel'
+
+
+:javascript
+  $(function() {
+    function collapse_panel(panel) {
+      panel.find('.panel-body').slideUp();
+      panel.find('.panel-expand-collapse').addClass('panel-collapsed');
+      panel.find('.panel-expand-collapse i').removeClass('fa-chevron-up').addClass('fa-chevron-down'); 
+    }
+
+    function expand_panel(panel) {
+      panel.find('.panel-body').slideDown();
+      panel.find('.panel-expand-collapse').removeClass('panel-collapsed');
+      panel.find('.panel-expand-collapse i').removeClass('fa-chevron-down').addClass('fa-chevron-up');
+    }
+
+    $(document).on('click', '.panel-heading span.panel-expand-collapse', function(e){
+      var $this = $(this);
+      var panel = $this.parents('.panel');
+      var is_collapsed = false;
+      if(!$this.hasClass('panel-collapsed')) {
+        collapse_panel(panel);     
+      } else {
+        expand_panel(panel);
+      }
+    });
+  });
+  
