--- a/app/views/drivers/availability.html.haml
+++ b/app/views/drivers/availability.html.haml
@@ -51,5 +51,8 @@
         expand_panel(panel);
       }
     });
+
+    collapse_panel($('.daily_availability_panel'));
+    collapse_panel($('.planned_leaves_panel'));
   });
   
