--- a/app/views/drivers/_daily_availability_panel.html.haml
+++ b/app/views/drivers/_daily_availability_panel.html.haml
@@ -1,4 +1,4 @@
-.panel.panel-primary
+.panel.panel-primary.daily_availability_panel
   .panel-heading
     .pull-right{style: 'padding-right: 0px;'}
       %span.panel-expand-collapse{title: 'Collapse/expand'}
