--- a/app/views/drivers/_planned_leaves_panel.html.haml
+++ b/app/views/drivers/_planned_leaves_panel.html.haml
@@ -1,4 +1,4 @@
-.panel.panel-primary
+.panel.panel-primary.planned_leaves_panel
   .panel-heading
     .pull-right{style: 'padding-right: 0px;'}
       %span.panel-expand-collapse{title: 'Collapse/expand'}
