Driver availability changes with recurring operating hours and daily operating hours (WIP)

--- a/app/views/drivers/_driver.html.haml
+++ b/app/views/drivers/_driver.html.haml
@@ -2,12 +2,14 @@
   - driver_overdue_check = get_driver_warnings(driver)
   %td{class: driver_overdue_check[:class_name], title: driver_overdue_check[:tips] }
     = link_to_if can?(:read, driver), driver.user_name, driver
+  %td{style: "width: 100px;"}
+    = driver.paid? ? translate_helper("driver_paid") : translate_helper("volunteer")
   %td
     = driver.active_status_text
   %td
-    = driver.paid? ? translate_helper("driver_paid") : translate_helper("volunteer")
-  %td
     = !driver.active? ? translate_helper("n_a") : (driver.available? ? translate_helper("driver_available") : translate_helper("driver_unavailable"))
+    .pull-right
+      = link_to translate_helper("driver_availability_link_title"), availability_driver_path(driver)
   %td
     = driver.compliant? ? translate_helper("no") : translate_helper("yes")
   %td
