--- a/app/views/shared/_availability_table.html.haml
+++ b/app/views/shared/_availability_table.html.haml
@@ -106,6 +106,10 @@
     color: lightgray;
   }
 
+  .availability-table td {
+    padding: 0px 5px !important;
+  }
+
   .is_disabled {
     background-color: lightgray;
   }
