Driver Availability Forecast page

--- a/app/views/drivers/index.html.haml
+++ b/app/views/drivers/index.html.haml
@@ -1,8 +1,9 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'drivers'
 #page-header.row
   .col-sm-12{style: 'padding: 0px;'}
-    - if can? :create, Driver
-      .pull-right
+    .pull-right
+      = link_to translate_helper("driver_availability_forecast_link_text"), availability_forecast_drivers_path, class: "btn action-button"
+      - if can? :create, Driver
         = link_to translate_helper("new_driver_link_text"), new_driver_path, class: "btn action-button"
     %h1
       = translate_helper("index_driver_heading")
