--- a/app/views/drivers/availability_forecast.html.haml
+++ b/app/views/drivers/availability_forecast.html.haml
@@ -1,3 +1,5 @@
+= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'drivers'
+
 .col-sm-12
   .col-sm-6
     = render 'availability_forecast_table'
