--- a/app/views/operating_hours/add.js.erb
+++ b/app/views/operating_hours/add.js.erb
@@ -45,4 +45,5 @@ if(is_all_day) {
   }
 }
 
-$('table.daily_availability').replaceWith("<%= j (render 'shared/availability_table', is_daily: true, operatable: @operatable) %>");
+$('table#daily_availability_table').floatThead('destroy');
+$('table#daily_availability_table').replaceWith("<%= j (render 'shared/availability_table', is_daily: true, operatable: @operatable) %>");
