--- a/app/views/operating_hours/remove.js.erb
+++ b/app/views/operating_hours/remove.js.erb
@@ -5,4 +5,5 @@ recur_row.find('input.is_all_day').prop('checked', false);
 recur_row.find('td.is_all_day_filled').removeClass('is_all_day_filled');
 recur_row.find('td.is_filled').removeClass('is_filled');
 
-$('table.daily_availability').replaceWith("<%= j (render 'shared/availability_table', is_daily: true, operatable: @operatable) %>");
+$('table#daily_availability_table').floatThead('destroy');
+$('table#daily_availability_table').replaceWith("<%= j (render 'shared/availability_table', is_daily: true, operatable: @operatable) %>");
