--- a/app/views/planned_leaves/update.js.erb
+++ b/app/views/planned_leaves/update.js.erb
@@ -3,4 +3,5 @@ var $new_row = $("<%= j (render 'shared/planned_leave_row', leave: @planned_leav
 $('#planned_leave_table tr[data-id=' + "<%= @planned_leave.id %>" + ']').slideUp('fast').replaceWith($new_row);
 $new_row.slideDown('slow');
 
-$('table.daily_availability').replaceWith("<%= j (render 'shared/availability_table', is_daily: true, operatable: @leavable) %>");
+$('table#daily_availability_table').floatThead('destroy');
+$('table#daily_availability_table').replaceWith("<%= j (render 'shared/availability_table', is_daily: true, operatable: @leavable) %>");
