--- a/app/views/runs/_form.html.haml
+++ b/app/views/runs/_form.html.haml
@@ -23,7 +23,7 @@
       .col-sm-3
         = f.label :name, translate_helper("name") 
       .col-sm-9
-        = f.text_field :name, class: 'form-control' 
+        = f.text_field :name, class: 'form-control', required: true
 
   .col-sm-12.col-md-6
     = render 'runs/date_time_panel', f: f, edit_mode: edit_mode
