fix floating table header

--- a/app/views/drivers/_availability_forecast_run_view.html.haml
+++ b/app/views/drivers/_availability_forecast_run_view.html.haml
@@ -103,7 +103,9 @@
     $(function() {
       // fixed table header
       $('#run_availability_table').floatThead({
-        position: 'fixed'
+        scrollContainer: function($table){
+          return $table.closest('.table-responsive');
+        }
       });
 
       setTimeout(function() {
