--- a/app/views/drivers/_availability_forecast_driver_view.html.haml
+++ b/app/views/drivers/_availability_forecast_driver_view.html.haml
@@ -155,8 +155,10 @@
   :javascript
     $(function() {
       // fixed table header
-      $('#driver_availability_table').floatThead({
-        position: 'fixed'
+      $('#driver_availability_table').floatThead({ 
+        scrollContainer: function($table){
+          return $table.closest('.table-responsive');
+        }
       });
 
       setTimeout(function() {
