--- a/app/views/shared/_availability_table.html.haml
+++ b/app/views/shared/_availability_table.html.haml
@@ -113,7 +113,7 @@
 
 - table_css_class = is_daily ? "daily_availability" : "recur_availability"
 - table_id = is_daily ? "daily_availability_table" : "recur_availability_table"
-.table-responsive
+.table-responsive{style: 'max-height: 300px; overflow-y: auto;'}
   %table.table.table-condensed.availability-table{class: table_css_class, id: table_id}
     %thead
       %th
@@ -240,7 +240,9 @@
 
     // fixed table header
     $('table.' + container_class).floatThead({
-      position: 'fixed'
+      scrollContainer: function($table){
+        return $table.closest('.table-responsive');
+      }
     });
 
     // change All Day checkbox
